--- a/Urban Dictionary/app/src/main/res/values/strings.xml
+++ b/Urban Dictionary/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="less">Less</string>
     <string name="thumb_up">&#128077;</string>
     <string name="thumb_down">&#128078;</string>
+    <string name="search">Search</string>
 </resources>
